gitops-webapp/web-app-gitops-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-app-gitops
spec: {}
status: {}
