gitops-webapp/web-app-gitops-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web-app-gitops-svc
  name: web-app-gitops-svc
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web-app-gitops
  type: ClusterIP
status:
  loadBalancer: {}
