gitops-webapp/web-app-gitops-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: web-app-gitops-svc
    app.kubernetes.io/instance: web-app-gitops
  name: web-app-gitops-svc
spec:
  port:
    targetPort: 8080-8080
  to:
    kind: Service
    name: web-app-gitops-svc
    weight: null
